--- a/accounts/templates/accounts/account_created.html
+++ b/accounts/templates/accounts/account_created.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Account successfully created!</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %}Account successfully created!{% endblock %}
+{% block content %}
 <h1>Account successfully created!</h1>
 <h1><a href={% url "accounts:login" %}>Log in</a></h1>
-</body>
-</html>
+{% endblock %}
