--- a/accounts/templates/accounts/create_account.html
+++ b/accounts/templates/accounts/create_account.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Create Account</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %}Create Account{% endblock %}
+{% block content %}
 <form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Create">
 </form>
-</body>
-</html>
+{% endblock %}
