--- a/guardian/templates/guardian/add_child.html
+++ b/guardian/templates/guardian/add_child.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %}Title{% endblock %}
+{% block content %}
 
 <form method="POST">
     {% csrf_token %}
@@ -12,5 +8,4 @@
     <input type="submit" value="Add">
 </form>
 
-</body>
-</html>
+{% endblock %}
