--- a/guardian/templates/guardian/view_programs.html
+++ b/guardian/templates/guardian/view_programs.html
@@ -1,15 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Programs list</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %}Programs list{% endblock %}
+{% block content %}
 <a href={% url "guardian:register" %}>Register for a program</a>
 <br>
 {% for program in programs %}
     Program Name: {{ program.name }}<br>
     Description: {{ program.description }}<br>
 {% endfor %}
-</body>
-</html>
+{% endblock %}
