--- a/org_admin/templates/org_admin/add_program.html
+++ b/org_admin/templates/org_admin/add_program.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %}Title{% endblock %}
+{% block content %}
 <form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Create">
 </form>
-</body>
-</html>
+{% endblock %}
