--- a/guardian/templates/guardian/view_programs.html
+++ b/guardian/templates/guardian/view_programs.html
@@ -1,15 +1,20 @@
 {% extends "base.html" %}
-{% load has_new_announcements_for %}
+{% load program_tags %}
 
 {% block title %}Programs list{% endblock %}
 {% block content %}
-<a href={% url "guardian:register" %}>Register for a program</a>
+<a href={% url "guardian:register_for_program" %}>Register for a program</a>
 <br>
+<h3>Programs:</h3>
 {% for program in programs %}
-    Program Name: {{ program.name }}<br>
-    Description: {{ program.description }}<br>
-    {% if program|has_new_announcements_for:user %}
-            This program has new announcements.
+    {{ program.name }}
+    <a href="{% url "guardian:view_program" program_pk=program.pk %}">[View]</a>
+    <br>
+    {% if user|has_children_in:program %}
+        You have children registered for this program.<br>
+    {% endif %}
+    {% if user|has_unread_announcements_in:program and user|has_children_in:program %}
+            This program has new announcements.<br>
     {% endif %}
 {% endfor %}
 {% endblock %}
